# drf_assignment

./: README.md  db.sqlite3  manage.py  pyproject.toml
apps/products/: admin.py  models.py  serializer.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py  0002_alter_product_description_alter_product_name.py  0003_alter_product_description.py  0004_alter_product_name.py
apps/utils/: models.py
assignmentcura/: asgi.py  settings.py  urls.py  wsgi.py
